@@ -23,6 +23,8 @@ package net.sourceforge.atunes.kernel.actions;
 import java.awt.event.ActionEvent;
 
 import net.sourceforge.atunes.gui.images.ImageLoader;
+import net.sourceforge.atunes.kernel.ControllerProxy;
+import net.sourceforge.atunes.kernel.modules.navigator.NavigationHandler;
 import net.sourceforge.atunes.kernel.modules.state.ApplicationState;
 import net.sourceforge.atunes.kernel.modules.visual.VisualHandler;
 import net.sourceforge.atunes.utils.LanguageTool;
@@ -47,5 +49,6 @@ public class ShowNavigationTableAction extends Action {
     public void actionPerformed(ActionEvent e) {
         ApplicationState.getInstance().setShowNavigationTable((Boolean) getValue(SELECTED_KEY));
         VisualHandler.getInstance().showNavigationTable((Boolean) getValue(SELECTED_KEY));
+        ControllerProxy.getInstance().getNavigationController().updateTableContent(NavigationHandler.getInstance().getCurrentView().getTree());
     }
 }
