@@ -21,6 +21,7 @@
 - INTERNAL: Share actions between play list and navigation tree and table
 - INTERNAL: Refactoring of play list
 - INTERNAL: Update search indexes only if user is going to perform a search
+- INTERNAL: Don't update navigation table if it's not visible
 - FIX: Images with alpha channel are displayed wrong
 - FIX: Too much memory needed when retrieving artist images from Last.fm with original size
 
